# routes/index.js
@@ -4,4 +4,5 @@ const home = require("../app/controller/user.js");
 
 app.post("/login", home.home);
 app.post("/signup", home.signup);
+app.post("/labels", home.labels);
 module.exports = router;
